package com.example.Sneakers.dtos;

import com.fasterxml.jackson.annotation.JsonProperty;
import jakarta.validation.constraints.Max;
import jakarta.validation.constraints.Min;
import jakarta.validation.constraints.NotBlank;
import jakarta.validation.constraints.Size;
import lombok.*;

import java.util.List;

@Data //toString
@Getter
@Setter
@AllArgsConstructor
@NoArgsConstructor
@Builder
public class ProductDTO {
    @NotBlank(message = "Title is required")
    @Size(min = 3, max = 200, message = "Title must be between 3 and 200 characters")
    private String name;

    @Min(value = 0, message = "Price must be greater than or equal to 0")
    private Long price;

    private String thumbnail;
    private String description;

    @JsonProperty("category_id")
    private Long categoryId;

    private Long discount;

    @Min(value = 0, message = "Quantity must be greater than or equal to 0")
    private Long quantity;

    @JsonProperty("add_quantity")
    private Boolean addQuantity; // If true, add quantity to existing; if false or null, replace quantity

    private List<Long> featureIds;
}