@startuml
skinparam classAttributeIconSize 0
skinparam classBackgroundColor LightBlue
skinparam classHeaderBackgroundColor DarkBlue
skinparam classHeaderFontColor White
skinparam classBorderColor Black
skinparam classArrowColor Black
skinparam arrowColor Black

' ============================================
' CORE ENTITIES - Đơn giản như mẫu
' ============================================

class User {
  - id : Long
  - email : String
  - password : String
  - fullName : String
  - phoneNumber : String
  - address : String
  - active : Boolean
}

class Role {
  - id : Long
  - name : String
}

class Product {
  - id : Long
  - name : String
  - price : Long
  - description : String
  - quantity : Long
  - thumbnail : String
}

class Category {
  - id : Long
  - name : String
}

class ProductImage {
  - id : Long
  - imageUrl : String
}

class Order {
  - id : Long
  - orderDate : LocalDateTime
  - status : String
  - totalMoney : Long
  - paymentMethod : String
  - shippingMethod : String
}

class OrderDetail {
  - id : Long
  - price : Long
  - numberOfProducts : Long
  - size : Long
}

class Cart {
  - id : Long
  - quantity : Long
  - size : Long
}

class Review {
  - id : Long
  - rating : Integer
  - comment : String
  - createdAt : LocalDateTime
}

class LockFeature {
  - id : Long
  - name : String
  - description : String
  - isActive : Boolean
}

class ProductFeature {
  - id : Long
}

class Banner {
  - id : Long
  - title : String
  - imageUrl : String
  - isActive : Boolean
  - startDate : LocalDateTime
  - endDate : LocalDateTime
}

class News {
  - id : Long
  - title : String
  - content : String
  - author : String
  - status : String
  - publishedAt : LocalDateTime
}

class ReturnRequest {
  - id : Long
  - reason : String
  - status : String
  - refundAmount : BigDecimal
  - requestedAt : LocalDateTime
}

class Voucher {
  - id : Long
  - code : String
  - name : String
  - discountPercentage : Integer
  - minOrderValue : Long
  - validFrom : LocalDateTime
  - validTo : LocalDateTime
  - isActive : Boolean
}

' ============================================
' RELATIONSHIPS - Aggregation (đúng chuẩn UML)
' Mỗi relationship chỉ định nghĩa 1 lần
' ============================================

' User relationships
User "*" o-- "1" Role
User "1" o-- "*" Order
User "1" o-- "*" Cart
User "1" o-- "*" Review

' Product relationships
Product "*" o-- "1" Category
Product "1" o-- "*" ProductImage
Product "1" o-- "*" ProductFeature
Product "1" o-- "*" Review

' Order relationships
Order "1" o-- "*" OrderDetail
Order "1" o-- "*" ReturnRequest
Order "*" o-- "0..1" Voucher

' OrderDetail relationships
OrderDetail "*" o-- "1" Product

' Cart relationships
Cart "*" o-- "1" Product

' ProductFeature relationships
ProductFeature "*" o-- "1" LockFeature

@enduml
